--- a/contact.css
+++ b/contact.css
@@ -134,6 +134,12 @@ nav {
   padding: 30px 50px 0px;
 }
 
+.pitch__us > textarea {
+  outline: none;
+  border: none;
+  padding: 10px;
+}
+
 .pitch__us > button {
   margin-top: 15px;
   border: none;
@@ -223,9 +229,13 @@ nav {
     font-size: 75px;
   }
   .contact__us {
-    height: 50%;
+    height: 60%;
     display: flex;
     flex-direction: column;
+  }
+
+  .contact__us > iframe {
+    height: 250px;
   }
 }
 
@@ -241,6 +251,9 @@ nav {
   }
 }
 @media (max-width: 450px) {
+  .company__name {
+    font-size: 18px;
+  }
   .lets__talk {
     font-size: 40px;
   }
