--- a/contact.css
+++ b/contact.css
@@ -134,7 +134,8 @@ nav {
   padding: 30px 50px 0px;
 }
 
-.pitch__us > textarea {
+.pitch__us > form > textarea {
+  width: 100%;
   outline: none;
   border: none;
   padding: 10px;
