--- a/about.css
+++ b/about.css
@@ -62,6 +62,7 @@ nav {
 /* Stick the Navbar to the top of the page after scrolling */
 .scroll {
   min-width: 100%;
+  margin-top: 10px;
   padding: 0 150px;
   height: 80px;
   background: rgb(54, 54, 54, 0.9);
@@ -509,7 +510,7 @@ footer > hr {
   }
 
   .scroll {
-    padding: 0 65px;
+    padding: 0px 65px;
   }
 
   .scroll .active {
@@ -614,7 +615,7 @@ footer > hr {
   }
 
   .scroll {
-    padding: 0 40px;
+    padding: 0px 40px;
   }
 
   .about--text > h1 {
