--- a/css/login.css
+++ b/css/login.css
@@ -25,7 +25,7 @@ button {
   position: relative;
   width: 100%;
   min-height: 100%;
-  background: url("../img/login-bg.webp") no-repeat center center/cover;
+  background: url("../img/login3.jpg") no-repeat fixed center/cover;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -48,44 +48,6 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-}
-
-/* fillimi navbarit */
-nav {
-  max-width: 600px;
-  display: flex;
-  gap: 20px;
-  align-items: center;
-}
-
-.menu {
-  display: none;
-}
-
-.company__name {
-  color: rgb(242, 242, 242);
-  font-size: 22px;
-  cursor: pointer;
-}
-
-.travel_title {
-  color: rgb(96, 236, 120);
-}
-
-.links {
-  text-decoration: none;
-  color: white;
-  padding: 10px 25px;
-  border-radius: 25px;
-  transition: all 0.2s;
-  font-weight: 600;
-}
-
-/* Current page link indicator */
-.links:hover,
-.current {
-  background-color: white;
-  color: #00a6ff;
 }
 
 /* log in form */
@@ -218,6 +180,7 @@ ul {
 .hidden {
   display: none;
 }
+
 .back {
   border: none;
   color: rgb(253, 97, 97);
