--- a/css/nav.css
+++ b/css/nav.css
@@ -1,8 +1,9 @@
 nav {
+  position: relative;
   max-width: 600px;
   display: flex;
-  gap: 20px;
   align-items: center;
+  gap: 20px;
   z-index: 10;
 }
 
@@ -16,7 +17,6 @@ nav {
   padding: 0 150px;
   height: 80px;
   background: rgb(54, 54, 54, 0.95);
-  /* outline: 2px solid #00a6ff; */
   box-shadow: 2px 2px 2px #00a6ff;
   position: fixed;
   z-index: 10;
@@ -64,27 +64,87 @@ nav {
 
 /* user log in/log out */
 .user__login {
-  cursor: pointer;
-  position: relative;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
-.logoutBtn,
-.dashboardBtn {
+.user {
+  width: 40px;
+  height: 40px;
+  display: flex;
+  cursor: pointer;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  font-weight: 600;
+  background-color: white;
+  color: #00a6ff;
+  transition: 0.2s all;
+}
+
+.user:hover {
+  color: white;
+  background: #00a6ff;
+}
+
+.user_info {
   display: none;
   position: absolute;
-  top: 100%;
-  left: 0;
-  background-color: #fff;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  border: 1px solid #ddd;
-  border-radius: 5px;
-  padding: 5px 10px;
-  z-index: 1;
-  /* background-color: #ddd; */
+  top: 60px;
+  /* display: flex; */
+  flex-direction: column;
+  gap: 10px;
+  padding: 20px;
+  border-radius: 10px;
+  background: rgba(0, 0, 0, 0.8);
 }
 
-.user__login .logoutBtn {
-  margin-top: 27px;
+.clicked {
+  display: flex;
+}
+
+.username {
+  font-weight: 600;
+  color: white;
+}
+
+.profileBtn,
+.logoutBtn,
+.dashboardBtn {
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
+  padding: 10px 15px;
+  z-index: 1;
+  font-weight: 600;
+  color: white;
+  transition: 0.2s all;
+}
+
+.profileBtn {
+  background: rgb(96, 236, 120);
+}
+
+.profileBtn:hover {
+  background: rgb(0, 220, 0);
+}
+
+.dashboardBtn {
+  background: #00a6ff;
+}
+
+.dashboardBtn:hover {
+  background: blue;
+}
+
+.logoutBtn {
+  background: rgb(255, 97, 97);
+}
+
+.logoutBtn:hover {
+  background: red;
 }
 
 @media (max-width: 1100px) {
@@ -124,6 +184,10 @@ nav {
 
   .scroll .active {
     right: 35px;
+  }
+
+  .user_info {
+    top: 300px;
   }
 }
 
