--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -1,8 +1,45 @@
-body {
-  font-family: "Inter", sans-serif;
+* {
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: "Inter", sans-serif;
 }
+
+body {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: #00edfa;
+}
+
+.banner {
+  min-width: 100%;
+  display: flex;
+  flex-direction: column;
+  padding: 0 30px;
+  gap: 50px;
+  align-items: center;
+}
+
+.banner > * {
+  max-width: 1000px;
+  margin: auto;
+}
+
+header {
+  width: 100%;
+  height: 130px;
+  max-width: 1100px;
+  padding: 20px 0;
+  /* border: 1px solid black; */
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .dashboard {
   max-width: 800px;
   margin: 50px auto;
