--- a/css/nav.css
+++ b/css/nav.css
@@ -71,6 +71,10 @@ nav {
   justify-content: center;
 }
 
+.user__login > form {
+  padding: 10px 15px;
+}
+
 .user {
   width: 40px;
   height: 40px;
@@ -114,17 +118,19 @@ nav {
 .profileBtn,
 .logoutBtn,
 .dashboardBtn {
+  text-decoration: none;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   border-radius: 5px;
   padding: 10px 15px;
   z-index: 1;
   font-weight: 600;
+  font-size: 14px;
   color: white;
   transition: 0.2s all;
 }
 
 .profileBtn {
-  background: rgb(96, 236, 120);
+  background: rgb(38, 211, 67);
 }
 
 .profileBtn:hover {
