--- a/css/nav.css
+++ b/css/nav.css
@@ -156,6 +156,11 @@ nav {
 @media (max-width: 1100px) {
   nav {
     max-width: 550px;
+    gap: 10px;
+  }
+
+  .links {
+    font-size: 13px;
   }
 }
 
