--- a/css/holidays.css
+++ b/css/holidays.css
@@ -11,12 +11,19 @@ body {
   justify-content: center;
   align-items: center;
   background: url(../img/bahamas.jpeg) no-repeat top center/cover;
+  padding: 0 30px;
+  gap: 30px;
 }
 
 button {
   outline: none;
   border: none;
   cursor: pointer;
+}
+
+body > * {
+  max-width: 1000px;
+  margin: auto;
 }
 
 header {
@@ -30,53 +37,123 @@ header {
   align-items: center;
 }
 
+.pick_holidays {
+  /* width: 100%; */
+  height: 50px;
+  margin: auto;
+  display: flex;
+  gap: 20px;
+  align-items: center;
+  justify-content: flex-start;
+  /* border: 1px solid red;  */
+}
+
+.pick_holidays > button {
+  height: 40px;
+  width: 120px;
+  padding: 10px;
+  font-weight: 600;
+  background: #f3f3f3;
+  color: #006eff;
+  border: 1px solid #006eff;
+  border-radius: 5px;
+  transition: 0.2s all;
+}
+
+.pick_holidays > button:hover {
+  color: #f3f3f3;
+  background: #006eff;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
 .this_week {
   display: flex;
   width: 100%;
   justify-content: space-between;
-  padding: 0 65px;
+  /* max-width: 1100px; */
+  padding: 10px 0px;
+}
+
+.this_week h1 {
+  color: #f3f3f3;
 }
 
 .this_week button {
-  padding: 5px;
+  padding: 5px 10px;
   border-radius: 5px;
   color: white;
-  background: blue;
+  font-weight: 500;
+  background: #006eff;
+  transition: 0.3s all;
 }
 
 .this_week button:hover {
-  transform: scale(1.02);
+  /* transform: scale(1.02); */
+  background: #f3f3f3;
+  color: #006eff;
 }
 
 .holiday__container {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+  /* flex-wrap: wrap; */
+  justify-content: flex-start;
   align-items: center;
+  gap: 30px;
+  max-width: 1100px;
+  padding: 20px;
+  overflow-x: scroll;
+  overflow-y: hidden;
+  background: rgba(241, 241, 241, 0.3);
 }
+
+/* Custom scrollbar styling */
+::-webkit-scrollbar {
+  height: 12px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #00aaff;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #006eff;
+}
+
 .holiday {
-  width: 350px;
-  margin: 20px;
-  text-align: center;
+  width: 300px;
+  height: 250px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
 
 .image-container {
+  width: 300px;
+  height: 200px;
   position: relative;
   overflow: hidden;
+  border-radius: 5px;
+  /* border: 1px solid red; */
 }
 
-.image-container img {
+.image-container > img {
   width: 100%;
-  height: auto;
+  height: 100%;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
     rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
-  border-radius: 5px;
   transition: transform 0.3s ease-in-out;
-  margin-top: 10px;
-}
-
-.image-container:hover img {
-  transform: scale(1.1);
 }
 
 .description {
@@ -86,6 +163,8 @@ header {
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.7);
+  padding: 10px;
+  font-size: 12px;
   color: #fff;
   display: flex;
   justify-content: center;
@@ -102,21 +181,26 @@ header {
 .place__details {
   display: flex;
   justify-content: space-between;
-  padding: 5px 10px 0 10px;
+  /* padding: 5px 10px 0 10px; */
 }
 
 .modal {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   max-width: 500px;
   background-color: #f3f3f3;
-  padding: 80px 96px;
+  padding: 80px 100px;
   box-shadow: 0 4rem 6rem rgba(0, 0, 0, 0.3);
   z-index: 1000;
+  border-radius: 10px;
   transition: all 0.5s;
-  margin-top: 5px;
+  /* margin-top: 5px; */
 }
 
 .overlay {
@@ -132,25 +216,30 @@ header {
 }
 
 .modal__header {
-  margin-bottom: 10px;
+  margin-bottom: 15px;
 }
 
 .modal__form {
+  width: 300px;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
+
 .modal__form input,
 textarea {
   width: 300px;
   border-radius: 10px;
   border: 1px solid gray;
   padding: 10px;
-  margin: 5px 0;
+  /* margin: 5px 0; */
 }
 
 .btn {
   background: blue;
   border-radius: 7px;
-  padding: 15px;
+  padding: 10px 15px;
   color: white;
   font-weight: 700;
   transition: all 0.2s;
@@ -173,4 +262,65 @@ textarea {
 .hidden {
   visibility: hidden;
   opacity: 0;
+}
+
+/* Responsive Design */
+@media (max-width: 1100px) {
+  header {
+    width: 800px;
+  }
+
+  body > * {
+    width: 800px;
+    margin: auto;
+  }
+}
+
+@media (max-width: 1030px) {
+  header {
+    position: relative;
+  }
+
+  .holiday__container {
+    height: 800px;
+    overflow-x: hidden;
+    overflow-y: scroll;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+}
+
+@media (max-width: 850px) {
+  body > * {
+    width: calc(100% - 70px);
+  }
+
+  .this_week h1 {
+    font-size: 24px;
+  }
+
+  .holiday__container {
+    height: 600px;
+    /* gap: 15px; */
+  }
+
+  .holiday,
+  .image-container {
+    width: 280px;
+  }
+}
+
+@media (max-width: 560px) {
+  body > * {
+    width: calc(100% - 20px);
+  }
+
+  .modal {
+    max-width: 350px;
+    padding: 20px 40px;
+  }
+
+  .modal__header {
+    font-size: 22px;
+  }
 }
