--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -10,13 +10,21 @@ body {
   height: 100%;
   display: flex;
   flex-direction: column;
+  gap: 10px;
   justify-content: center;
   align-items: center;
-  background: #00edfa;
+  background: #000536;
+}
+
+button {
+  outline: none;
+  border: none;
+  cursor: pointer;
 }
 
 .banner {
   min-width: 100%;
+  /* height: 130px; */
   display: flex;
   flex-direction: column;
   padding: 0 30px;
@@ -40,13 +48,94 @@ header {
   align-items: center;
 }
 
+.container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  gap: 20px;
+  /* border: 1px solid white; */
+}
+
+.sidebar {
+  height: 100%;
+  width: 200px;
+  padding: 20px 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 50px;
+  align-items: center;
+  position: relative;
+  top: 0;
+  left: 0;
+  color: #f2f2f2;
+}
+
+.sidebar > h1 {
+  color: #f2f2f2;
+}
+
+.sidebar > .tables {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.table {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  padding: 0px 10px;
+  border-radius: 5px;
+  color: #f2f2f2;
+  transition: 0.3s all;
+}
+
+.table > .indc {
+  width: 20px;
+  height: 20px;
+  font-size: 18px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.table > button {
+  min-width: 100%;
+  /* width: 140px; */
+  height: 40px;
+  font-weight: 700;
+  background: transparent;
+  color: #f2f2f2;
+  border-radius: 5px;
+  font-size: 16px;
+}
+
+.current,
+.table:hover {
+  background: #f2f2f2;
+}
+
+.current > .indc,
+.current > button,
+.table:hover > button,
+.table:hover > .indc {
+  color: #000536;
+}
+
 .dashboard {
   max-width: 900px;
-  margin: 50px auto;
+  height: 550px;
+  /* margin: 50px auto; */
   padding: 20px;
   background-color: #fff;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   border-radius: 10px;
+}
+
+.hidden {
+  display: none;
 }
 
 h1 {
