--- a/css/holidays.css
+++ b/css/holidays.css
@@ -52,6 +52,9 @@ header {
   height: 40px;
   width: 120px;
   padding: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   font-weight: 600;
   background: #f3f3f3;
   color: #006eff;
@@ -60,7 +63,8 @@ header {
   transition: 0.2s all;
 }
 
-.pick_holidays > button:hover {
+.pick_holidays > button:hover,
+.pick_holidays > .picked {
   color: #f3f3f3;
   background: #006eff;
 }
@@ -74,7 +78,9 @@ main {
 .this_week {
   display: flex;
   width: 100%;
+  flex-wrap: wrap;
   justify-content: space-between;
+  gap: 50px;
   /* max-width: 1100px; */
   padding: 10px 0px;
 }
@@ -105,6 +111,7 @@ main {
   align-items: center;
   gap: 30px;
   max-width: 1100px;
+  /* width: 350px; */
   padding: 20px;
   overflow-x: scroll;
   overflow-y: hidden;
@@ -162,13 +169,14 @@ main {
   left: 0;
   width: 100%;
   height: 100%;
+  overflow-y: auto;
   background: rgba(0, 0, 0, 0.7);
   padding: 10px;
-  font-size: 12px;
+  font-size: 13px;
   color: #fff;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: start;
   opacity: 0;
   transition: opacity 0.3s ease-in-out;
   cursor: default;
@@ -176,6 +184,10 @@ main {
 
 .image-container:hover .description {
   opacity: 1;
+}
+
+.description::-webkit-scrollbar {
+  width: 5px;
 }
 
 .place__details {
@@ -209,6 +221,7 @@ main {
   left: 0;
   width: 100%;
   height: 100%;
+  padding: 10px;
   background-color: rgba(0, 0, 0, 0.5);
   backdrop-filter: blur(4px);
   z-index: 100;
@@ -236,17 +249,21 @@ textarea {
   /* margin: 5px 0; */
 }
 
-.btn {
+.btn,
+.tour_login {
+  text-decoration: none;
   background: blue;
   border-radius: 7px;
-  padding: 10px 15px;
+  padding: 10px 25px;
   color: white;
   font-weight: 700;
+  outline: 1px solid blue;
   transition: all 0.2s;
 }
 
 .btn:hover {
-  transform: scale(1.1);
+  background: #f3f3f3;
+  color: blue;
 }
 
 .btn--close-modal {
@@ -322,5 +339,13 @@ textarea {
 
   .modal__header {
     font-size: 22px;
+  }
+
+  .this_week {
+    gap: 20px;
+  }
+
+  .pick_holidays > button {
+    font-size: 12px;
   }
 }
