--- a/css/nav.css
+++ b/css/nav.css
@@ -71,10 +71,6 @@ nav {
   justify-content: center;
 }
 
-.user__login > form {
-  padding: 10px 15px;
-}
-
 .user {
   width: 40px;
   height: 40px;
@@ -118,10 +114,26 @@ nav {
 .profileBtn,
 .logoutBtn,
 .dashboardBtn {
+  width: 100px;
+  height: 40px;
   text-decoration: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   border-radius: 5px;
+  z-index: 1;
+  font-weight: 600;
+  font-size: 14px;
+  color: white;
+  transition: 0.2s all;
+}
+
+.logoutBtn > button {
+  width: 100%;
+  height: 100%;
   padding: 10px 15px;
+  border-radius: 5px;
   z-index: 1;
   font-weight: 600;
   font-size: 14px;
@@ -145,11 +157,11 @@ nav {
   background: blue;
 }
 
-.logoutBtn {
+.logoutBtn > button {
   background: rgb(255, 97, 97);
 }
 
-.logoutBtn:hover {
+.logoutBtn > button:hover {
   background: red;
 }
 
