--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -2,7 +2,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: "Inter", sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
 body {
@@ -48,11 +48,29 @@ header {
   align-items: center;
 }
 
+/* Custom scrollbar styling */
+::-webkit-scrollbar {
+  height: 10px;
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+  border-radius: 5px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #000536;
+  border-radius: 5px;
+}
+
 .container {
   width: 100%;
   height: 100%;
   display: flex;
-  gap: 20px;
+  gap: 50px;
   /* border: 1px solid white; */
 }
 
@@ -75,6 +93,10 @@ header {
   color: #f2f2f2;
 }
 
+.sidebar > button {
+  display: none;
+}
+
 .sidebar > .tables {
   width: 100%;
   display: flex;
@@ -84,10 +106,14 @@ header {
 
 .table {
   width: 100%;
+  height: 40px;
   display: flex;
   align-items: center;
-  padding: 0px 10px;
+  gap: 15px;
+  justify-content: start;
+  padding: 10px;
   border-radius: 5px;
+  background: transparent;
   color: #f2f2f2;
   transition: 0.3s all;
 }
@@ -101,38 +127,31 @@ header {
   justify-content: center;
 }
 
-.table > button {
-  min-width: 100%;
-  /* width: 140px; */
-  height: 40px;
-  font-weight: 700;
-  background: transparent;
-  color: #f2f2f2;
-  border-radius: 5px;
-  font-size: 16px;
-}
-
 .current,
 .table:hover {
   background: #f2f2f2;
 }
 
 .current > .indc,
-.current > button,
-.table:hover > button,
-.table:hover > .indc {
+.current > h3,
+.table:hover > .indc,
+.table:hover > h3 {
   color: #000536;
 }
 
 .dashboard {
-  max-width: 900px;
-  max-height: 550px;
+  position: relative;
+  width: calc(100% - 300px);
+  height: 500px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
   /* margin: 50px auto; */
   padding: 20px;
   background-color: #fff;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   border-radius: 10px;
-  overflow: auto;
+  overflow: hidden;
 }
 
 .hidden {
@@ -144,12 +163,18 @@ h1 {
 }
 
 .table-container {
+  width: 100%;
   overflow: auto;
 }
 
 table {
   border-collapse: collapse;
-  margin-top: 20px;
+  border: 1px solid #ddd;
+}
+
+.fixed {
+  position: sticky;
+  top: -1px;
 }
 
 th,
@@ -161,4 +186,46 @@ td {
 
 th {
   background-color: #f2f2f2;
+}
+
+@media (max-width: 1100px) {
+  .container {
+    gap: 30px;
+  }
+
+  .sidebar {
+    width: 100px;
+  }
+
+  .sidebar > h1 {
+    display: none;
+  }
+
+  .sidebar > button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 30px;
+    background: transparent;
+    color: #f2f2f2;
+  }
+
+  .table > h3 {
+    display: none;
+  }
+
+  .active_side {
+    width: 200px;
+    /* position: absolute; */
+    background: #000536;
+    z-index: 10;
+  }
+
+  .active_side .table > h3 {
+    display: block;
+  }
+
+  .dashboard {
+    width: calc(100% - 150px);
+  }
 }
