--- a/css/holidays.css
+++ b/css/holidays.css
@@ -2,7 +2,7 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: "Inter", sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
 body {
@@ -236,7 +236,7 @@ main {
   width: 300px;
   text-align: center;
   display: flex;
-  flex-direction: column;
+  border: 1px solid red;
   gap: 10px;
 }
 
