--- a/css/home.css
+++ b/css/home.css
@@ -1,8 +1,8 @@
 * {
-  padding: 0;
-  margin: 0;
   box-sizing: border-box;
-  font-family: "Inter", sans-serif;
+  margin: 0;
+  padding: 0;
+  font-family: "Montserrat", sans-serif;
 }
 
 body {
@@ -173,7 +173,7 @@ input[type="search"]::-webkit-search-results-decoration {
   display: flex;
   flex-direction: column;
   font-size: 32px;
-  font-weight: 600;
+  font-weight: semi-bold;
   letter-spacing: 1.8px;
   padding-bottom: 20px;
   /* border: 1px solid red; */
