--- a/css/nav.css
+++ b/css/nav.css
@@ -129,18 +129,6 @@ nav {
   transition: 0.2s all;
 }
 
-.logoutBtn > button {
-  width: 100%;
-  height: 100%;
-  padding: 10px 15px;
-  border-radius: 5px;
-  z-index: 1;
-  font-weight: 600;
-  font-size: 14px;
-  color: white;
-  transition: 0.2s all;
-}
-
 .profileBtn {
   background: rgb(38, 211, 67);
 }
@@ -157,12 +145,86 @@ nav {
   background: blue;
 }
 
-.logoutBtn > button {
+.logoutBtn {
   background: rgb(255, 97, 97);
 }
 
-.logoutBtn > button:hover {
+.logoutBtn:hover {
   background: red;
+}
+
+/* Modal */
+.modal_logout {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 15px;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  max-width: 500px;
+  background-color: #f3f3f3;
+  padding: 80px 100px;
+  box-shadow: 0 4rem 6rem rgba(0, 0, 0, 0.3);
+  z-index: 1000;
+  border-radius: 10px;
+  transition: all 0.5s;
+  /* margin-top: 5px; */
+}
+
+.overlay_logout {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding: 10px;
+  background-color: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(4px);
+  z-index: 100;
+  transition: all 0.5s;
+}
+
+.modal__form_logout {
+  width: 300px;
+  text-align: center;
+  display: flex;
+  /* flex-direction: column; */
+  gap: 10px;
+}
+
+.btn_no {
+  width: 100px;
+  text-decoration: none;
+  background: blue;
+  border-radius: 7px;
+  padding: 10px 25px;
+  color: white;
+  font-weight: 700;
+  outline: 1px solid blue;
+  transition: all 0.2s;
+}
+
+.btn_no:hover {
+  background: #f3f3f3;
+  color: blue;
+}
+
+.btn--close-modal_logout {
+  position: absolute;
+  top: 0;
+  right: 20px;
+  font-size: 50px;
+  cursor: pointer;
+  border: none;
+  background: none;
+}
+
+.hidden {
+  visibility: hidden;
+  opacity: 0;
 }
 
 @media (max-width: 1100px) {
@@ -217,6 +279,15 @@ nav {
 @media (max-width: 560px) {
   .scroll {
     padding: 0 40px;
+  }
+
+  .modal_logout {
+    max-width: 350px;
+    padding: 20px 40px;
+  }
+
+  .modal__header_logout {
+    font-size: 22px;
   }
 }
 /* fundi navbarit */
