Added transition to navbar and banner inputs functions changed

--- a/css/holidays.css
+++ b/css/holidays.css
@@ -236,7 +236,7 @@ main {
   width: 300px;
   text-align: center;
   display: flex;
-  border: 1px solid red;
+  flex-direction: column;
   gap: 10px;
 }
 
