--- a/css/nav.css
+++ b/css/nav.css
@@ -62,6 +62,13 @@ nav {
   color: #00a6ff;
 }
 
+/* Responsive nav design */
+.active {
+  visibility: visible;
+  opacity: 1;
+  z-index: 10;
+}
+
 /* user log in/log out */
 .user__login {
   padding: 0;
@@ -91,19 +98,22 @@ nav {
 }
 
 .user_info {
-  display: none;
   position: absolute;
   top: 60px;
-  /* display: flex; */
+  display: flex;
   flex-direction: column;
   gap: 10px;
   padding: 20px;
   border-radius: 10px;
   background: rgba(0, 0, 0, 0.8);
+  opacity: 0;
+  visibility: hidden;
+  transition: 0.3s all;
 }
 
 .clicked {
-  display: flex;
+  opacity: 1;
+  visibility: visible;
 }
 
 .username {
@@ -240,7 +250,17 @@ nav {
 
 @media (max-width: 1000px) {
   nav {
-    display: none;
+    padding: 10px;
+    border-radius: 5px;
+    position: absolute;
+    right: 0;
+    top: 100px;
+    display: flex;
+    flex-direction: column;
+    background: rgba(43, 42, 42, 0.8);
+    opacity: 0;
+    visibility: hidden;
+    transition: 0.3s all;
   }
 
   .menu {
@@ -250,17 +270,6 @@ nav {
     background: transparent;
     color: white;
     font-size: 26px;
-  }
-
-  .active {
-    padding: 10px;
-    border-radius: 5px;
-    position: absolute;
-    right: 0;
-    top: 100px;
-    display: flex;
-    flex-direction: column;
-    background: rgba(43, 42, 42, 0.8);
   }
 
   .scroll {
