--- a/css/home.css
+++ b/css/home.css
@@ -46,6 +46,58 @@ header {
   align-items: center;
 }
 
+/* Modal for successful reservation */
+.modal {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  max-width: 500px;
+  background-color: #f3f3f3;
+  padding: 80px 100px;
+  box-shadow: 0 4rem 6rem rgba(0, 0, 0, 0.3);
+  z-index: 1000;
+  border-radius: 10px;
+  transition: all 0.5s;
+  /* margin-top: 5px; */
+}
+
+.btn--close-modal {
+  position: absolute;
+  top: 0;
+  right: 20px;
+  font-size: 50px;
+  cursor: pointer;
+  border: none;
+  background: none;
+}
+
+.overlay_modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  min-width: 100%;
+  height: 100%;
+  padding: 10px;
+  background-color: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(4px);
+  z-index: 100;
+  transition: all 0.5s;
+}
+
+.hidden {
+  visibility: hidden;
+  opacity: 0;
+}
+
+.invisible {
+  display: none;
+}
 /* -------------------------------------------- */
 
 /* search holiday section */
@@ -480,7 +532,7 @@ main {
   opacity: 1;
 }
 
-.overlay {
+._modal {
   position: absolute;
   top: 0;
   left: 0;
@@ -497,11 +549,11 @@ main {
   gap: 50px;
 }
 
-.image__container:hover .overlay {
+.image__container:hover ._modal {
   opacity: 1;
 }
 
-.overlay > .title {
+._modal > .title {
   display: flex;
   flex-direction: column;
   gap: 10px;
@@ -509,7 +561,7 @@ main {
   align-items: center;
 }
 
-.overlay > .title > span {
+._modal > .title > span {
   height: 1px;
   background: white;
   width: 150px;
@@ -701,7 +753,7 @@ main {
   color: white;
 } */
 
-.canyon:hover .overlay {
+.canyon:hover ._modal {
   opacity: 1;
 }
 
