--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -48,6 +48,92 @@ header {
   align-items: center;
 }
 
+/* Modal */
+.modal {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  max-width: 500px;
+  background-color: #f3f3f3;
+  padding: 80px 100px;
+  box-shadow: 0 4rem 6rem rgba(0, 0, 0, 0.3);
+  z-index: 1000;
+  border-radius: 10px;
+  transition: all 0.5s;
+  /* margin-top: 5px; */
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding: 10px;
+  background-color: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(4px);
+  z-index: 100;
+  transition: all 0.5s;
+}
+
+.modal__header {
+  margin-bottom: 15px;
+}
+
+.modal__form {
+  width: 300px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.modal__form input,
+textarea {
+  width: 300px;
+  border-radius: 10px;
+  border: 1px solid gray;
+  padding: 10px;
+  /* margin: 5px 0; */
+}
+
+.btn,
+.tour_login {
+  text-decoration: none;
+  background: blue;
+  border-radius: 7px;
+  padding: 10px 25px;
+  color: white;
+  font-weight: 700;
+  outline: 1px solid blue;
+  transition: all 0.2s;
+}
+
+.btn:hover {
+  background: #f3f3f3;
+  color: blue;
+}
+
+.btn--close-modal {
+  position: absolute;
+  top: 0;
+  right: 20px;
+  font-size: 50px;
+  cursor: pointer;
+  border: none;
+  background: none;
+}
+
+.hidden {
+  visibility: hidden;
+  opacity: 0;
+}
+
 /* Custom scrollbar styling */
 ::-webkit-scrollbar {
   height: 10px;
