--- a/css/profile.css
+++ b/css/profile.css
@@ -53,17 +53,17 @@ header {
   justify-content: space-between;
   align-items: center;
   border-radius: 30px;
-  padding: 10px;
+  padding: 10px 20px;
   box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
   width: 70%;
   height: 475px;
-  margin-top: -30px;
   background: #12c2e9;
   background: -webkit-linear-gradient(to right, #60ec78, #0c8ace, #00a6ff);
   background: linear-gradient(to right, #60ec78, #0c8ace, #00a6ff);
 }
 
 .left-container {
+  position: relative;
   background: #000000;
   background: -webkit-linear-gradient(to right, #434343, #000000);
   background: linear-gradient(to right, #434343, #000000);
@@ -80,11 +80,13 @@ header {
 }
 
 .right-container {
+  display: flex;
+  flex-direction: column;
   background: #000000;
   background: -webkit-linear-gradient(to left, #434343, #000000);
   background: linear-gradient(to left, #434343, #000000);
   flex: 1;
-  max-width: 70%;
+  width: 70%;
   height: 430px;
   padding: 10px;
   margin: 20px;
@@ -98,7 +100,30 @@ img {
   max-width: 200px;
   border-radius: 50%;
   margin: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  aspect-ratio: 4/3 auto;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+#profile {
+  display: none;
+}
+
+.add_profile {
+  position: absolute;
+  top: 140px;
+  right: 80px;
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  background: #00a6ff;
+  color: #f2f2f2;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
 }
 
 .left-container > h2 {
@@ -115,7 +140,7 @@ img {
   color: transparent;
   -webkit-background-clip: text;
 }
-p {
+.profile__container p {
   font-size: 18px;
   margin-bottom: 20px;
   color: aliceblue;
@@ -141,6 +166,39 @@ td {
 td:first-child {
   font-weight: bold;
 }
+
+td > input {
+  padding: 5px;
+  background: transparent;
+  display: flex;
+  font-size: 16px;
+  align-items: center;
+  outline: none;
+  color: #f2f2f2;
+  border: none;
+}
+
+td > input:focus {
+  outline: 1px solid whitesmoke;
+}
+
+.save {
+  visibility: hidden;
+  margin: auto;
+  width: 100px;
+  padding: 10px;
+  border-radius: 5px;
+  background: linear-gradient(to right, #60ec78, #00a6ff 100%);
+  color: #f2f2f2;
+  font-weight: 600;
+  transition: 0.2s all;
+}
+
+.save:hover {
+  background: #f2f2f2;
+  color: #00a6ff;
+}
+
 .credit a {
   text-decoration: none;
   color: #fff;
@@ -154,7 +212,7 @@ td:first-child {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-@media only screen and (max-width: 860px) {
+@media (max-width: 860px) {
   .profile__container {
     flex-direction: column;
     margin: 10px;
@@ -166,7 +224,7 @@ td:first-child {
     max-width: 100%;
   }
 }
-@media only screen and (max-width: 600px) {
+@media (max-width: 600px) {
   .profile__container {
     flex-direction: column;
     margin: 10px;
