--- a/css/contact.css
+++ b/css/contact.css
@@ -123,6 +123,74 @@ header {
   cursor: pointer;
 }
 
+/* Modal for successful reservation */
+.modal_reservation {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  max-width: 500px;
+  background-color: #f3f3f3;
+  padding: 80px 100px;
+  box-shadow: 0 4rem 6rem rgba(0, 0, 0, 0.3);
+  z-index: 1000;
+  border-radius: 10px;
+  transition: all 0.5s;
+}
+
+.btn--close-modal {
+  position: absolute;
+  top: 0;
+  right: 20px;
+  font-size: 50px;
+  cursor: pointer;
+  border: none;
+  background: none;
+}
+
+.tour_login {
+  text-decoration: none;
+  background: blue;
+  border-radius: 7px;
+  padding: 10px 25px;
+  color: white;
+  font-weight: 700;
+  outline: 1px solid blue;
+  transition: all 0.2s;
+}
+
+.btn:hover {
+  background: #f3f3f3;
+  color: blue;
+}
+
+.overlay_modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  min-width: 100%;
+  height: 100%;
+  padding: 10px;
+  background-color: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(4px);
+  z-index: 100;
+  transition: all 0.5s;
+}
+
+.hidden {
+  visibility: hidden;
+  opacity: 0;
+}
+
+.invisible {
+  display: none;
+}
+
 /* Responsive Design */
 @media (max-width: 1100px) {
   header {
