--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -7,13 +7,13 @@
 
 body {
   width: 100%;
-  height: 100%;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   gap: 10px;
-  justify-content: center;
+  /* justify-content: center; */
   align-items: center;
-  background: #000536;
+  background: url('../img/dashboard2.jpg') no-repeat center left/cover;
 }
 
 button {
@@ -153,6 +153,7 @@ textarea {
 }
 
 .container {
+  position: relative;
   width: 100%;
   height: 100%;
   display: flex;
@@ -164,6 +165,8 @@ textarea {
   height: 100%;
   width: 200px;
   padding: 20px 30px;
+  border-radius: 10px;
+  background: rgba(255, 255, 255, 0.25);
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -298,7 +301,16 @@ th {
   background: red;
 }
 
+/* Responsive Design */
 @media (max-width: 1100px) {
+  header {
+    width: 800px;
+  }
+
+  .banner > * {
+    width: 800px;
+    margin: auto;
+  }
   .container {
     gap: 20px;
   }
@@ -337,5 +349,34 @@ th {
 
   .dashboard {
     width: calc(100% - 150px);
+  }
+}
+
+@media (max-width: 1000px) {
+  body {
+    overflow-x: hidden;
+  }
+
+  header {
+    position: relative;
+  }
+}
+
+
+@media (max-width: 860px) {
+  .banner > * {
+    width: calc(100% - 70px);
+  }
+}
+
+@media (max-width: 560px) {
+  .banner > * {
+    width: calc(100% - 20px);
+  }
+}
+
+@media (max-width: 460px) {
+  .banner > * {
+    width: calc(100% - 20px);
   }
 }
