--- a/css/profile.css
+++ b/css/profile.css
@@ -7,13 +7,13 @@
 
 body {
   width: 100%;
-  height: 100%;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   gap: 10px;
-  justify-content: center;
+  /* justify-content: center; */
   align-items: center;
-  background: #000536;
+  background: url("../img/profile_page.jpg") no-repeat top center/cover;
 }
 
 button {
@@ -50,13 +50,14 @@ header {
 
 .profile__container {
   display: flex;
-  flex-direction: row;
+  gap: 20px;
   justify-content: space-between;
   align-items: center;
+  flex-wrap: wrap;
   border-radius: 30px;
   padding: 10px 20px;
   box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
-  width: 70%;
+  width: 75%;
   height: 475px;
   background: #12c2e9;
   background: -webkit-linear-gradient(to right, #60ec78, #0c8ace, #00a6ff);
@@ -75,7 +76,6 @@ header {
   align-items: center;
   height: 430px;
   padding: 10px;
-  margin: 30px;
   border-radius: 20px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
@@ -88,11 +88,18 @@ header {
   background: linear-gradient(to left, #434343, #000000);
   flex: 1;
   width: 70%;
+  min-width: 330px;
   height: 430px;
   padding: 10px;
-  margin: 20px;
   border-radius: 30px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.profile_img {
+  position: relative;
+  width: 150px;
+  height: 150px;
+  margin: 10px;
 }
 
 img {
@@ -100,7 +107,7 @@ img {
   height: 150px;
   max-width: 200px;
   border-radius: 50%;
-  margin: 10px;
+  /* margin: 10px; */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -114,8 +121,8 @@ img {
 
 .add_profile {
   position: absolute;
-  top: 140px;
-  right: 80px;
+  bottom: 10px;
+  right: 10px;
   width: 25px;
   height: 25px;
   border-radius: 50%;
@@ -140,6 +147,7 @@ img {
   background-image: linear-gradient(to right, #60ec78, #00a6ff 100%);
   color: transparent;
   -webkit-background-clip: text;
+  text-align: center;
 }
 .profile__container p {
   font-size: 18px;
@@ -152,26 +160,46 @@ table {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  gap: 10px;
   width: 100%;
-  height: 280px;
+  min-height: 280px;
   border-collapse: collapse;
 }
 
+tr {
+  display: flex;
+  align-items: center;
+  /* justify-content: center; */
+  gap: 10px;
+}
+
 td {
+  min-width: 120px;
   padding: 10px;
+  text-overflow: clip;
   border: none;
+  text-align: left;
   border-radius: 20px;
   color: white;
 }
 
 td:first-child {
+  max-width: 100px;
+  font-weight: bold;
+}
+
+td:nth-child(2) {
+  max-width: 200px;
   font-weight: bold;
 }
 
 td > input {
+  width: 100%;
   padding: 5px;
   background: transparent;
   display: flex;
+  justify-content: center;
+  text-align: center;
   font-size: 16px;
   align-items: center;
   outline: none;
@@ -210,28 +238,81 @@ td > input:focus {
   color: #fff;
   text-align: center;
   margin-top: 10px;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+/* Responsive Design */
+@media (max-width: 1100px) {
+  header {
+    width: 800px;
+  }
+
+  .banner > * {
+    width: 800px;
+    margin: auto;
+  }
+}
+
+@media (max-width: 1000px) {
+  body {
+    overflow-x: hidden;
+  }
+
+  header {
+    position: relative;
+  }
 }
 
 @media (max-width: 860px) {
+  .banner > * {
+    width: calc(100% - 70px);
+  }
+
   .profile__container {
+    padding: 20px;
     flex-direction: column;
-    margin: 10px;
     height: auto;
     width: 90%;
   }
   .left-container {
-    flex: 1;
-    max-width: 100%;
+    min-width: 100%;
+  }
+  .right-container {
+    min-width: 100%;
   }
 }
+
 @media (max-width: 600px) {
   .profile__container {
     flex-direction: column;
-    margin: 10px;
   }
   .left-container {
     flex: 1;
     max-width: 100%;
   }
 }
+
+@media (max-width: 560px) {
+  .banner > * {
+    width: calc(100% - 20px);
+  }
+
+  tr {
+    margin-bottom: -10px;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    gap: 0px;
+  }
+
+  td {
+    text-align: center;
+  }
+}
+
+@media (max-width: 460px) {
+  .banner > * {
+    width: calc(100% - 20px);
+  }
+}
+
+
