--- a/css/home.css
+++ b/css/home.css
@@ -745,7 +745,7 @@ main {
 }
 
 .canyon {
-  max-width: 450px;
+  max-width: 350px;
   position: relative;
   display: flex;
   flex-direction: column;
@@ -780,14 +780,52 @@ main {
 }
 
 .canyon > img {
-  width: 100%;
+  max-width: 320px;
+  min-height: 250px;
   border-radius: 5px;
+  aspect-ratio: 16/9;
   box-shadow: 1px 1px 2px gray;
 }
 
 .price {
   display: flex;
   justify-content: space-between;
+}
+
+.description {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 250px;
+  border-radius: 5px;
+  background: rgba(0, 0, 0, 0.7);
+  padding: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+}
+
+.pick {
+  position: relative;
+  padding: 10px;
+  background: blue;
+  border-radius: 7px;
+  color: white;
+  font-weight: 700;
+  outline: 1px solid blue;
+  transition: all 0.2s;
+}
+
+.pick:hover {
+  background: #f3f3f3;
+  color: blue;
+}
+
+.canyon:hover .description {
+  opacity: 1;
 }
 
 /* Responsive Design */
